// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders children passed to it 1`] = `
<div>
  <button
    aria-label="Cart item options"
    onClick={[Function]}
  >
    <Icon
      src={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "color": [Function],
            "size": [Function],
          },
          "render": [Function],
        }
      }
    />
  </button>
  <ul>
    <span />
    <p />
    <div />
  </ul>
</div>
`;

exports[`it renders correctly without children 1`] = `
<div>
  <button
    aria-label="Cart item options"
    onClick={[Function]}
  >
    <Icon
      src={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "color": [Function],
            "size": [Function],
          },
          "render": [Function],
        }
      }
    />
  </button>
  <ul />
</div>
`;
